Fix boat/minecart rendering issue